--- a/locale/de.yml
+++ b/locale/de.yml
@@ -124,6 +124,8 @@ de:
   resource_meta_data_responsible: "Responsible"
   resource_meta_data_copyright_notice: "Copyright Notice"
   resource_meta_data_date: "Date"
+  resource_meta_data_fallback_start: "(Keine Metadaten für Vokabular '"
+  resource_meta_data_fallback_end: "')"
 
   # # MediaEntry
   media_entry_not_published_warning_msg: "Entry is not published yet!"
