Presenter: cleanup MediaResource(s)
Presenter:
-   unified "MediaResources", meaning an ordered, paginated, filterable list of either `MediaEntry`, `Collection`, `FilterSet` or `MediaResource`.
    The latter one is only used for this kind of polymorph list is needed (right now only `Collection#child_media_resources`).
-   split up all remaining "MediaResources" as Hash with 3 Keys" into seperate collections/presenter methods.
    only impacted on user/dashboard.
-   typecheck class on init
- remove .total_count for performance

Controller:
params handling for all controllers that use `MediaResources` either directly or indirectly.

TODO:
- "MediaResources" ->  "MediaResourcesList" ?
- "MultiMediaResources": presenter for up to 3 'MediaResources(List)s', with toggle-switch but without the 'all' option

--- a/locale/de.yml
+++ b/locale/de.yml
@@ -27,12 +27,18 @@ de:
   # # General Madek
   sitemap_admin: "Admin"
   sitemap_my_archive: "Mein Archiv"
-  sitemap_my_unpublished: "Unveröffentlicht"
-  sitemap_my_content: "Meine Inhalte"
+  sitemap_my_unpublished: "Meine unveröffentlichten Einträge"
+  sitemap_my_content_media_entries: "Meine Einträge"
+  sitemap_my_content_collections: "Meine Sets"
+  sitemap_my_content_filter_sets: "Meine FilterSets"
   sitemap_my_latest_imports: "Meine letzten Importe"
-  sitemap_my_favorites: "Meine Favoriten"
+  sitemap_my_favorite_media_entries: "Meine Favoriten (Einträge)"
+  sitemap_my_favorite_collections: "Meine Favoriten (Sets)"
+  sitemap_my_favorite_filter_sets: "Meine Favoriten (FilterSets)"
   sitemap_my_used_keywords: "Meine Schlagworte"
-  sitemap_my_entrusted_content: "Mir anvertraute Inhalte"
+  sitemap_my_entrusted_media_entries: "Mir anvertraute Einträge"
+  sitemap_my_entrusted_collections: "Mir anvertraute Sets"
+  sitemap_my_entrusted_filter_sets: "Mir anvertraute FilterSets"
   sitemap_my_groups: "Meine Arbeitsgruppen"
   sitemap_my_filter_demo: "Filter demo"
 
