--- a/locale/en.yml
+++ b/locale/en.yml
@@ -25,12 +25,18 @@ en:
   # # General Madek
   sitemap_admin: "Admin"
   sitemap_my_archive: "My Archive"
-  sitemap_my_unpublished: "Unpublished"
-  sitemap_my_content: "My content"
+  sitemap_my_unpublished: "My unpublished Entries"
+  sitemap_my_content_media_entries: "My Entries"
+  sitemap_my_content_collections: "My Sets"
+  sitemap_my_content_filter_sets: "My FilterSets"
   sitemap_my_latest_imports: "My latest imports"
-  sitemap_my_favorites: "My favorites"
+  sitemap_my_favorite_media_entries: "My favorites (Entries)"
+  sitemap_my_favorite_collections: "My favorites (Sets)"
+  sitemap_my_favorite_filter_sets: "My favorites (FilterSets)"
   sitemap_my_used_keywords: "My keywords"
-  sitemap_my_entrusted_content: "My entrusted content"
+  sitemap_my_entrusted_media_entries: "My entrusted Entries"
+  sitemap_my_entrusted_collections: "My entrusted Sets"
+  sitemap_my_entrusted_filter_sets: "My entrusted FilterSets"
   sitemap_my_groups: "My Groups"
   sitemap_my_filter_demo: "Filter demo"
 
