view: app: menu: "Entries", "Sets, "FilterSets"
completes the "MediaResources" split

--- a/locale/de.yml
+++ b/locale/de.yml
@@ -26,6 +26,11 @@ de:
 
   # # General Madek
   sitemap_admin: "Admin"
+  sitemap_api: "API"
+  sitemap_entries: "Einträge"
+  sitemap_collections: "Sets"
+  sitemap_filter_sets: "FilterSets"
+  sitemap_explore: "Erkunden"
   sitemap_my_archive: "Mein Archiv"
   sitemap_my_unpublished: "Meine unveröffentlichten Einträge"
   sitemap_my_content_media_entries: "Meine Einträge"
