--- a/locale/en.yml
+++ b/locale/en.yml
@@ -24,6 +24,11 @@ en:
 
   # # General Madek
   sitemap_admin: "Admin"
+  sitemap_api: "API"
+  sitemap_entries: "Entries"
+  sitemap_collections: "Sets"
+  sitemap_filter_sets: "FilterSets"
+  sitemap_explore: "Explore"
   sitemap_my_archive: "My Archive"
   sitemap_my_unpublished: "My unpublished Entries"
   sitemap_my_content_media_entries: "My Entries"
