--- a/locale/de.yml
+++ b/locale/de.yml
@@ -137,17 +137,16 @@ de:
   resource_meta_data_date: "Date"
   resource_meta_data_saved_filter: "Gespeicherter Filter"
   resource_meta_data_resource_type: "Typ"
-  resource_meta_data_fallback_start: "(Keine Metadaten für Vokabular '"
-  resource_meta_data_fallback_end: "')"
+  resource_meta_data_fallback: "Es sind keine Metadaten zu diesem Kontext bereit gestellt."
 
   # # MediaEntry
   media_entry_tab_main: "Medieneintrag"
   media_entry_tab_relations: "Zusammenhänge"
-  media_entry_tab_more_data: "Weitere Daten"
+  media_entry_tab_more_data: "Alle Daten"
   media_entry_tab_permissions: "Berechtigungen"
   media_entry_not_published_warning_msg: "Entry is not published yet!"
   media_entry_meta_data_header_prefix: "Metadaten editieren: "
-  media_entry_more_data_title: "More data"
+  media_entry_more_data_title: "Resource"
   media_entry_file_information_title: "File Information"
   media_entry_media_import_header: "Medien importieren"
   media_entry_media_import_title: "Bilder, Videos, Audio-Dateien oder Dokumente bereitstellen:"
