--- a/locale/en.yml
+++ b/locale/en.yml
@@ -135,15 +135,16 @@ en:
   resource_meta_data_date: "Date"
   resource_meta_data_saved_filter: "Saved Filter"
   resource_meta_data_resource_type: "Resource Type"
+  resource_meta_data_fallback: "No meta data for this Context."
 
   # # MediaEntry
   media_entry_tab_main: "Entry"
   media_entry_tab_relations: "Relations"
-  media_entry_tab_more_data: "More Data"
+  media_entry_tab_more_data: "All Data"
   media_entry_tab_permissions: "Permissions"
   media_entry_not_published_warning_msg: "Entry is not published yet!"
   media_entry_meta_data_header_prefix: "Editing Metadata:"
-  media_entry_more_data_title: "More data"
+  media_entry_more_data_title: "Resource"
   media_entry_file_information_title: "File Information"
   media_entry_media_import_header: "Media import"
   media_entry_back_btn: "Back"
