--- a/locale/en.yml
+++ b/locale/en.yml
@@ -137,6 +137,10 @@ en:
   resource_meta_data_resource_type: "Resource Type"
 
   # # MediaEntry
+  media_entry_tab_main: "Entry"
+  media_entry_tab_relations: "Relations"
+  media_entry_tab_more_data: "More Data"
+  media_entry_tab_permissions: "Permissions"
   media_entry_not_published_warning_msg: "Entry is not published yet!"
   media_entry_meta_data_header_prefix: "Editing Metadata:"
   media_entry_more_data_title: "More data"
