feature: add set to set

--- a/locale/de.yml
+++ b/locale/de.yml
@@ -182,17 +182,18 @@ de:
   media_entry_back_btn: "Back"
   media_entry_upload_btn: "Upload"
   media_entry_notices_title: "Hinweise"
-  media_entry_select_collection_title: "Zu Set hinzufügen/entfernen"
-  media_entry_select_collection_search: "Suchen"
-  media_entry_select_collection_search_placeholder: "Suche"
-  media_entry_select_collection_clear: "Clear"
-  media_entry_select_collection_hint_search: "Suchen Sie Sets und markieren Sie diejenigen, in denen der Medieneintrag enthalten sein soll."
-  media_entry_select_collection_hint_more: "Es wurden noch weitere Sets gefunden. Bitte verfeinern Sie Ihre Suche."
-  media_entry_select_collection_non_found: "Zu dieser Suche wurde kein Set gefunden."
-  media_entry_select_collection_non_assigned: "Inhalt ist noch keinem Set zugewiesen."
-  media_entry_select_collection_save: "Speichern"
-  media_entry_select_collection_cancel: "Abbrechen"
+  resource_select_collection_title: "Zu Set hinzufügen/entfernen"
+  resource_select_collection_search: "Suchen"
+  resource_select_collection_search_placeholder: "Suche"
+  resource_select_collection_clear: "Clear"
+  resource_select_collection_hint_search: "Suchen Sie Sets und markieren Sie diejenigen, in denen der Medieneintrag enthalten sein soll."
+  resource_select_collection_hint_more: "Es wurden noch weitere Sets gefunden. Bitte verfeinern Sie Ihre Suche."
+  resource_select_collection_non_found: "Zu dieser Suche wurde kein Set gefunden."
+  resource_select_collection_non_assigned: "Inhalt ist noch keinem Set zugewiesen."
+  resource_select_collection_save: "Speichern"
+  resource_select_collection_cancel: "Abbrechen"
   media_entry_select_collection_flash_result: "Removed entry from %{removed_count} sets. Added entry to %{added_count} sets."
+  collection_select_collection_flash_result: "Removed set from %{removed_count} sets. Added set to %{added_count} sets."
 
   # # MetaData
   meta_data_form_save_btn: "Save"
