--- a/locale/de.yml
+++ b/locale/de.yml
@@ -111,16 +111,17 @@ de:
   collection_new_cancel: "Abbrechen"
   collection_new_flash_title_needed: "Titel ist ein Pflichtfeld"
   collection_new_flash_successful: "Set wurde kreiert!"
+  collection_edit_highlights_title: "Inhalte hervorheben"
   collection_edit_cover_title: "Titelbild für Set festlegen"
-  collection_edit_cover_cancel: "Abbrechen"
-  collection_edit_cover_save: "Auswahl speichern"
-  collection_edit_cover_h_selection: "Auswahl"
-  collection_edit_cover_h_title: "Titel"
-  collection_edit_cover_h_subtitle: "Untertitel"
-  collection_edit_cover_h_author: "Autor/in"
-  collection_edit_cover_h_date: "Datierung"
-  collection_edit_cover_h_keywords: "Schlagworte"
-  collection_edit_cover_h_responsible: "Rechteinhaber"
+  collection_resource_selection_cancel: "Abbrechen"
+  collection_resource_selection_save: "Auswahl speichern"
+  collection_resource_selection_h_selection: "Auswahl"
+  collection_resource_selection_h_title: "Titel"
+  collection_resource_selection_h_subtitle: "Untertitel"
+  collection_resource_selection_h_author: "Autor/in"
+  collection_resource_selection_h_date: "Datierung"
+  collection_resource_selection_h_keywords: "Schlagworte"
+  collection_resource_selection_h_responsible: "Rechteinhaber"
   collection_ask_delete_title: "Set löschen"
   collection_ask_delete_ok: "Löschen"
   collection_ask_delete_cancel: "Abbrechen"
