--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -8,7 +8,7 @@ sitemap_explore,Erkunden,Explore,
 sitemap_help,Support,Support,
 sitemap_search,Suche,Search,
 sitemap_my_archive,Mein Archiv,My archive,
-sitemap_my_archive_title,Mein Archiv,My archive,
+sitemap_my_archive_title,Mein Archiv,My Archive,
 sitemap_my_unpublished,Meine ungesicherten Medieneinträge,My unsaved media entries,
 sitemap_my_unpublished_title,Meine ungesicherten Medieneinträge,My Unsaved Media Entries,
 sitemap_my_content_media_entries,Meine Medieneinträge,My media entries,
@@ -48,10 +48,9 @@ permission_subject_title_apiapps,API-Applikationen,API Clients,
 permission_subject_title_public,Öffentlichkeit,Public,
 permission_subject_name_public,Internet,Internet,
 permission_name_get_metadata_and_previews,Betrachten,View,
-permission_name_get_full_size,Original exportieren & in PDF blättern,Edit original & browse PDFs,
-permission_name_edit_metadata,Metadaten editieren & Inhalte zu Set hinzufügen,Edit metadata & add content to set,
+permission_name_get_full_size,Original exportieren & in PDF blättern,Export original & browse PDF,
+permission_name_edit_metadata,Metadaten editieren & Inhalte zu Set hinzufügen,Edit metadata & add items to set,
 permission_name_edit_permissions,Zugriffsberechtigungen ändern,Edit permissions,
-permission_name_edit_metadata_and_relations,Metadaten editieren & Inhalte zu Set hinzufügen,Metadaten editieren & Inhalte zu Set hinzufügen,
 permission_overridden_by_public,(überschrieben durch die öffentlichen Berechtigungen),(overridden by public permissions),
 permissions_responsible_user_title,Verantwortliche Person,Responsible User,
 permissions_responsible_user_msg,Die verantwortliche Person hat alle Berechtigungen zu den ausgewählten Inhalten und kann diese auch löschen.,The responsible user has all permissions for the selected content and can also delete it.,
@@ -63,19 +62,19 @@ permissions_table_remove_subject_btn,Berechtigung entfernen,Remove Permissions,
 permissions_overview_yours_title,Ihre Berechtigungen,Your Permissions,
 permissions_overview_yours_msg_start,"Sie, ","You, ",
 permissions_overview_yours_msg_end,", haben gegenwärtig als Person oder als Mitglied einer Gruppe folgende Berechtigungen",", currently have the following permissions (either directly or as a member of a group):",
-btn_delete_confirm_msq,"Sind Sie sicher, dass Sie diesen Inhalt löschen wollen?",Are you sure you want to delete this?,
-btn_publish_confirm_msg,"Sind Sie sicher, dass Sie diesen Inhalt veröffentlichen wollen?",Are you sure you want to publish this?,
+btn_delete_confirm_msq,"Sind Sie sicher, dass Sie diesen Inhalt löschen wollen?",Are you sure you want to delete this item?,
+btn_publish_confirm_msg,"Sind Sie sicher, dass Sie diesen Inhalt sichern wollen?",Are you sure you want to publish this item?,
 btn_delete_text,Löschen,Delete,
-btn_publish_text,Veröffentlichen,Publish,
+btn_publish_text,Speichern,Save,
 picture_alt_prefix,Bild: ,Picture:,
-picture_alt_fallback,(unbekannt),(Picture),
+picture_alt_fallback,(unbekannt),(unkown),
 pagination_prefix,Seite,Page,
-pagination_of,der,of,
+pagination_of,von,of,
 relations_title,Zusammenhänge,Relations,
 no_relations_title,Es wurden keine Zusammenhänge gefunden.,No relations found.,
 relations_parents_title,Übergeordnete Sets,Parents,
-relations_siblings_title,Untergeordnete Sets,Siblings,
-collection_media_resources_title,Medieneintrag im Set:,Media Entries in Collection:,
+relations_siblings_title,Benachbarte Sets,Siblings,
+collection_media_resources_title,Medieneintrag im Set:,Media Entries in Sets:,
 collection_permissions_btn,Zugriffsberechtigungen ändern,Permissions,
 collection_edit_cover_submit_btn,Auswahl speichern,Submit,
 collection_edit_highlights_btn,Auswahl speichern,Submit,
@@ -94,7 +93,7 @@ workgroup_link_to_contents_text,Inhalte,Contents,
 workgroup_members_table_title,Mitglieder,Members,
 workgroup_members_table_login,Login,Login,
 workgroup_members_table_is_member,Mitglied?,Member?,
-dashboard_title_head,Mein Archiv,Dashboard - Madek,
+dashboard_title_head,Mein Archiv,My Archive,
 resources_header_show_all,alle anzeigen,show all,
 dashboard_create_media_entry_btn,Medien importieren,Add Media,
 dashboard_welcome_msg,Willkommen im Medienarchiv der Künste!,Welcome to Madek!,
@@ -108,11 +107,11 @@ resource_meta_data_saved_filter,Gespeicherter Filter,Saved filter,
 resource_meta_data_resource_type,Medientyp,Media type,
 resource_meta_data_fallback,Es sind keine Metadaten zu diesem Kontext bereitgestellt.,No meta data for this context.,
 media_entry_tab_main,Medieneintrag,Media Entry,
-collection_tab_main,Set,Set,
 media_entry_tab_relations,Zusammenhänge,Relations,
+collection_tab_main,Set,Set,
 media_entry_tab_more_data,Alle Daten,All Data,
 media_entry_tab_permissions,Berechtigungen,Permissions,
-media_entry_not_published_warning_msg,Dieser Medieneintrag ist noch nicht veröffentlicht!,Media entry is not published yet!,
+media_entry_not_published_warning_msg,Dieser Medieneintrag ist noch nicht gesichert!,Media entry is not saved yet!,
 media_entry_meta_data_header_prefix,Metadaten editieren: ,Edit Metadata:,
 media_entry_more_data_title,Verantwortlichkeit und Aktivität,Responsibility,
 media_entry_file_information_title,Datei,File Information,
@@ -144,54 +143,56 @@ media_entry_was_disfavored,Der Medieneintrag wurde von den Favoriten entfernt.,M
 collection_was_favored,Das Set wurde zu den Favoriten hinzugefügt.,Set was added to favorites.,
 collection_was_disfavored,Das Set wurde von den Favoriten entfernt.,Set was removed from favorites.,
 ,,,
-batch_meta_data_edit,Metadaten für %{media_entry_count} Einträge gleichzeitig editieren,Metadaten für %{media_entry_count} Einträge gleichzeitig editieren,TODO_cleanup_interpolation
-collection_ask_delete_title,Set löschen,Set löschen,
-collection_ask_delete_ok,Löschen,Löschen,
-collection_ask_delete_cancel,Abbrechen,Abbrechen,
-collection_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgendes Set löschen möchten: ","Sind Sie sicher, dass Sie folgendes Set löschen möchten: ",
+batch_meta_data_edit,Metadaten für %{media_entry_count} Einträge gleichzeitig editieren,Edit meta data for %{media_entry_count} entries at once.,TODO_cleanup_interpolation
+collection_ask_delete_title,Set löschen,Delete Set,
+collection_ask_delete_ok,Löschen,Delete,
+collection_ask_delete_cancel,Abbrechen,Cancel,
+collection_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgendes Set löschen möchten: ",Are you sure that you want to delete the following set:,
 collection_ask_delete_question_post,?,?,
-collection_delete_success,Set wurde gelöscht!,Set wurde gelöscht!,
-collection_edit_cover_submit_btn,Submit,Submit,
-collection_edit_highlights_btn,Submit,Submit,
-collection_edit_highlights_title,Inhalte hervorheben,Inhalte hervorheben,
-collection_edit_cover_title,Titelbild für Set festlegen,Titelbild für Set festlegen,
-collection_new_header,Create Collection,Create Collection,
-collection_new_dialog_title,Set erstellen,Set erstellen,
-collection_new_label_title,Titel,Titel,
-collection_new_create_set,Set erstellen,Set erstellen,
-collection_new_cancel,Abbrechen,Abbrechen,
-collection_new_flash_title_needed,Titel ist ein Pflichtfeld,Titel ist ein Pflichtfeld,
-collection_new_flash_successful,Set wurde kreiert!,Set wurde kreiert!,
-collection_edit_permissions_btn,Submit,Submit,
-collection_resource_selection_cancel,Abbrechen,Abbrechen,
-collection_resource_selection_save,Auswahl speichern,Auswahl speichern,
-collection_resource_selection_h_selection,Auswahl,Auswahl,
-collection_resource_selection_h_title,Titel,Titel,
-collection_resource_selection_h_subtitle,Untertitel,Untertitel,
-collection_resource_selection_h_author,Autor/in,Autor/in,
-collection_resource_selection_h_date,Datierung,Datierung,
-collection_resource_selection_h_keywords,Schlagworte,Schlagworte,
-collection_resource_selection_h_responsible,Rechteinhaber,Rechteinhaber,
-dashboard_create_collection_btn,Create set,Create set,
-dashboard_create_collection,Set erstellen,Set erstellen,
-media_entry_select_collection_flash_result,Removed entry from %{removed_count} sets. Added entry to %{added_count} sets.,Removed entry from %{removed_count} sets. Added entry to %{added_count} sets.,TODO_cleanup_interpolation
-collection_select_collection_flash_result,Removed set from %{removed_count} sets. Added set to %{added_count} sets.,Removed set from %{removed_count} sets. Added set to %{added_count} sets.,TODO_cleanup_interpolation
-meta_data_batch_hint_no_data,Noch keine Metadaten vorhanden,Noch keine Metadaten vorhanden,
-meta_data_batch_hint_differences,Unterschiedliche Metadaten vorhanden,Unterschiedliche Metadaten vorhanden,
-meta_data_batch_hint_differences_override,"Achtung: Bestehende Werte werden durch Änderungen überschrieben! Wenn keine Änderungen vorgenommen werden, bleiben die verschiedenen Werte erhalten.","Achtung: Bestehende Werte werden durch Änderungen überschrieben! Wenn keine Änderungen vorgenommen werden, bleiben die verschiedenen Werte erhalten.",
-meta_data_batch_hint_equal_data,Gleiche Metadaten vorhanden,Gleiche Metadaten vorhanden,
-meta_data_batch_hint_value,Wert und Text,Wert und Text,
-meta_data_batch_success,Metadaten wurden erfolgreich aktualisiert.,Metadaten wurden erfolgreich aktualisiert.,
-meta_data_batch_failure,Metadaten konnten nicht aktualisiert werden.,Metadaten konnten nicht aktualisiert werden.,
-resource_select_collection_title,Zu Set hinzufügen/entfernen,Zu Set hinzufügen/entfernen,
-resource_select_collection_search,Suchen,Suchen,
-resource_select_collection_search_placeholder,Suche,Suche,
-resource_select_collection_clear,Clear,Clear,
-resource_select_collection_hint_search,"Suchen Sie Sets und markieren Sie diejenigen, in denen der Medieneintrag enthalten sein soll.","Suchen Sie Sets und markieren Sie diejenigen, in denen der Medieneintrag enthalten sein soll.",
-resource_select_collection_hint_more,Es wurden noch weitere Sets gefunden. Bitte verfeinern Sie Ihre Suche.,Es wurden noch weitere Sets gefunden. Bitte verfeinern Sie Ihre Suche.,
-resource_select_collection_non_found,Zu dieser Suche wurde kein Set gefunden.,Zu dieser Suche wurde kein Set gefunden.,
-resource_select_collection_non_assigned,Inhalt ist noch keinem Set zugewiesen.,Inhalt ist noch keinem Set zugewiesen.,
-resource_select_collection_save,Speichern,Speichern,
-resource_select_collection_cancel,Abbrechen,Abbrechen,
+collection_delete_success,Set wurde gelöscht!,Set deleted.,
+collection_edit_cover_submit_btn,Speichern,Submit,
+collection_edit_highlights_btn,Bearbeiten,Edit,
+collection_edit_highlights_title,Inhalte hervorheben,Highlight Contents,
+collection_edit_cover_title,Titelbild für Set festlegen,Define Set Cover,
+collection_new_header,Neues Set,Create Set,
+collection_new_dialog_title,Set erstellen,Create Set,
+collection_new_label_title,Titel,Title,
+collection_new_create_set,Set erstellen,Create Set,
+collection_new_cancel,Abbrechen,Cancel,
+collection_new_flash_title_needed,Titel ist ein Pflichtfeld.,Title is a mandatory field.,
+collection_new_flash_successful,Set wurde erstellt.,Set was created.,
+collection_edit_permissions_btn,Speichern,Submit,
+collection_resource_selection_cancel,Abbrechen,Cancel,
+collection_resource_selection_save,Auswahl speichern,Save selection,
+collection_resource_selection_h_selection,Auswahl,Selection,
+collection_resource_selection_h_title,Titel,Title,
+collection_resource_selection_h_subtitle,Untertitel,Subtitle,
+collection_resource_selection_h_author,Autor/in,Author,
+collection_resource_selection_h_date,Datierung,Dating,
+collection_resource_selection_h_keywords,Schlagworte,Keywords,
+collection_resource_selection_h_responsible,Rechteinhaber,Owner,
+dashboard_create_collection_btn,Set erstellen,Create set,
+dashboard_create_collection,Set erstellen,Create set,
+media_entry_select_collection_flash_result,Eintrag aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed entry from %{removed_count} sets. Added entry to %{added_count} sets.,TODO_cleanup_interpolation
+collection_select_collection_flash_result,Set aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed set from %{removed_count} sets. Added set to %{added_count} sets.,TODO_cleanup_interpolation
+meta_data_batch_hint_no_data,Noch keine Metadaten vorhanden,No meta data available yet.,
+meta_data_batch_hint_differences,Unterschiedliche Metadaten vorhanden,Different meta data in place.,
+meta_data_batch_hint_differences_override,"Achtung: Bestehende Werte werden durch Änderungen überschrieben! Wenn keine Änderungen vorgenommen werden, bleiben die verschiedenen Werte erhalten.",Attention: Changes will replace exiting values. Without changes values will be preserved.,
+meta_data_batch_hint_equal_data,Gleiche Metadaten vorhanden,Same meta data in place.,
+meta_data_batch_hint_value,Wert und Text,Value and text,
+meta_data_batch_success,Metadaten wurden erfolgreich aktualisiert.,Succesfully updated meta data.,
+meta_data_batch_failure,Metadaten konnten nicht aktualisiert werden.,Meta data could not be updated.,
+resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
+resource_select_collection_search,Suchen,Search,
+resource_select_collection_search_placeholder,Suche,Search,
+resource_select_collection_clear,Löschen,Clear,
+resource_select_collection_hint_search,"Suchen Sie Sets und markieren Sie diejenigen, in denen der Medieneintrag enthalten sein soll.",Search for and select sets that should hold the media entry.,
+resource_select_collection_hint_more,Es wurden noch weitere Sets gefunden. Bitte verfeinern Sie Ihre Suche.,Additional sets were found. Please refine your search.,
+resource_select_collection_non_found,Zu dieser Suche wurde kein Set gefunden.,No set was found.,
+resource_select_collection_non_assigned,Inhalt ist noch keinem Set zugewiesen.,Entry is not yet part of any set.,
+resource_select_collection_save,Speichern,Save,
+resource_select_collection_cancel,Abbrechen,Cancel,
 ,,,
-search_btn_search,Suchen,Search
+search_btn_search,Suchen,Search,
+meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank meta datum value for meta key ,
+meta_data_blank_value_for_required_meta_key_post,!,!,
