feat: ResourceMetaData: submit and handle errors async
Squashed with cleanup

Author:    phiku <philipp.kuederli@zhdk.ch>
Date:      Wed May 4 17:57:43 2016 +0200

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -106,6 +106,7 @@ resource_meta_data_date,Datierung,Date,
 resource_meta_data_saved_filter,Gespeicherter Filter,Saved filter,
 resource_meta_data_resource_type,Medientyp,Media type,
 resource_meta_data_fallback,Es sind keine Metadaten zu diesem Kontext bereitgestellt.,No meta data for this context.,
+resource_meta_data_has_validation_errors,Es gibt fehlerhafte Eingabefelder.,Es gibt fehlerhafte Eingabefelder.,
 media_entry_tab_main,Medieneintrag,Media Entry,
 media_entry_tab_relations,Zusammenhänge,Relations,
 collection_tab_main,Set,Set,
