ui/view: fixes and cleanup
- view:
    - entry/more_data: remove activity_log
    - media entry unpublished header
    - app header (support, search)
- react
    - Polybox: fix toggle
    - fix form proptypes
    - fix autocomplete
- controller/view: search
- presenter: doc
- styles: fix progressive styles

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -5,6 +5,8 @@ sitemap_media_entries,Einträge,Media entries,
 sitemap_collections,Sets,Sets,
 sitemap_filter_sets,Filtersets,Filter sets,
 sitemap_explore,Erkunden,Explore,
+sitemap_help,Support,Support,
+sitemap_search,Suche,Search,
 sitemap_my_archive,Mein Archiv,My archive,
 sitemap_my_archive_title,Mein Archiv,My archive,
 sitemap_my_unpublished,Meine ungesicherten Medieneinträge,My unsaved media entries,
@@ -189,3 +191,5 @@ resource_select_collection_non_found,Zu dieser Suche wurde kein Set gefunden.,Zu
 resource_select_collection_non_assigned,Inhalt ist noch keinem Set zugewiesen.,Inhalt ist noch keinem Set zugewiesen.,
 resource_select_collection_save,Speichern,Speichern,
 resource_select_collection_cancel,Abbrechen,Abbrechen,
+,,,
+search_btn_search,Suchen,Search
