fix: translations: permission names

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -49,8 +49,9 @@ permission_subject_title_public,Öffentlichkeit,Public,
 permission_subject_name_public,Internet,Internet,
 permission_name_get_metadata_and_previews,Betrachten,View,
 permission_name_get_full_size,Original exportieren & in PDF blättern,Export original & browse PDF,
-permission_name_edit_metadata,Metadaten editieren & Inhalte zu Set hinzufügen,Edit metadata & add items to set,
+permission_name_edit_metadata,Metadaten editieren,Edit metadata,
 permission_name_edit_permissions,Zugriffsberechtigungen ändern,Edit permissions,
+permission_name_edit_metadata_and_relations,Metadaten editieren & Inhalte hinzufügen,Edit Metadate and contents,
 permission_overridden_by_public,(überschrieben durch die öffentlichen Berechtigungen),(overridden by public permissions),
 permissions_responsible_user_title,Verantwortliche Person,Responsible User,
 permissions_responsible_user_msg,Die verantwortliche Person hat alle Berechtigungen zu den ausgewählten Inhalten und kann diese auch löschen.,The responsible user has all permissions for the selected content and can also delete it.,
