--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -124,6 +124,8 @@ media_entry_media_import_inside_nojs,Dateien auswählen,Select Files,
 media_entry_back_btn,Zurück,Back,
 media_entry_upload_btn,Importieren,Upload,
 media_entry_notices_title,Hinweise,Notices,
+meta_data_blank_value_for_required_meta_key_pre,"Metadatum-Wert nicht vorhanden für Meta-Key ","Blank meta datum value for meta key ",
+meta_data_blank_value_for_required_meta_key_post,!,!
 meta_data_form_save_btn,Speichern,Save,
 meta_data_form_cancel_link,Abbrechen,Cancel,
 meta_data_form_submit_btn,Speichern,Submit,
