feature: flyout action buttons

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -150,11 +150,14 @@ collection_was_disfavored,Das Set wurde von den Favoriten entfernt.,Set was remo
 ,,,
 batch_meta_data_edit,Metadaten für %{media_entry_count} Einträge gleichzeitig editieren,Edit meta data for %{media_entry_count} entries at once.,TODO_cleanup_interpolation
 collection_ask_delete_title,Set löschen,Delete Set,
-collection_ask_delete_ok,Löschen,Delete,
-collection_ask_delete_cancel,Abbrechen,Cancel,
+media_entry_ask_delete_title,Eintrag löschen,Delete Entry,
+resource_ask_delete_ok,Löschen,Delete,
+resource_ask_delete_cancel,Abbrechen,Cancel,
 collection_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgendes Set löschen möchten: ",Are you sure that you want to delete the following set:,
-collection_ask_delete_question_post,?,?,
+media_entry_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgende Eintrag löschen möchten: ",Are you sure that you want to delete the following entry:,
+resource_ask_delete_question_post,?,?,
 collection_delete_success,Set wurde gelöscht!,Set deleted.,
+media_entry_delete_success,Eintrag wurde gelöscht!,Entry deleted.,
 collection_edit_cover_submit_btn,Speichern,Submit,
 collection_edit_highlights_btn,Bearbeiten,Edit,
 collection_edit_highlights_title,Inhalte hervorheben,Highlight Contents,
