--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -124,6 +124,17 @@ media_entry_media_import_inside_nojs,Dateien auswählen,Select Files,
 media_entry_back_btn,Zurück,Back,
 media_entry_upload_btn,Importieren,Upload,
 media_entry_notices_title,Hinweise,Notices,
+media_entry_export_title,Eintrag exportieren,Export Entry,
+media_entry_export_close,Schliessen,Close,
+media_entry_export_download,Download,Download,
+media_entry_export_no_content,You have no access to the original file and there are no previews available.,You have no access to the original file and there are no previews available.,
+media_entry_export_original,Original,Original,
+media_entry_export_has_no_original,You are not allowed to download the original file.,You are not allowed to download the original file.,
+media_entry_export_original_hint,Download original file as it was when it was uploaded.,Download original file as it was when it was uploaded.,
+media_entry_export_subtitle_images,Bilder,Bilder,
+media_entry_export_subtitle_videos,Videos,Videos,
+media_entry_export_subtitle_audios,Audios,Audios,
+media_entry_export_subtitle_documents,Dokumente,Dokumente,
 meta_data_blank_value_for_required_meta_key_pre,"Metadatum-Wert nicht vorhanden für Meta-Key ","Blank meta datum value for meta key ",
 meta_data_blank_value_for_required_meta_key_post,!,!
 meta_data_form_save_btn,Speichern,Save,
