--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -42,6 +42,11 @@ login_box_rememberme,Login merken,remember me,
 login_box_login_btn,Anmelden,Log In,
 login_box_external,ZHdK-Login,ZHdK Login,
 login_box_internal,Externe,External,
+login_box_title,Digitales Areal ZHdK,Digital Area ZHdK,
+login_box_cite,Das Medienarchiv der Künste ist die Plattform der ZHdK zum gemeinschaftlichen Arbeiten mit Medien und Teilen von Inhalten.,,
+login_box_author, ,
+login_box_hint_first_line,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.,
+login_box_hint_second_line, ,
 permission_subject_title_users,Personen,Users,
 permission_subject_title_groups,Gruppen,Groups,
 permission_subject_title_apiapps,API-Applikationen,API Clients,
