feat: MediaType icons, Uploader
ui:

ResourceThumbnail:
-mediaType icons
  - uses (fontawesome) icons
  - styled for grid and miniature layouts
- statusIcon (uploading+privacy)

Uploader:
- title from filename while uploading
- upload hints
- unify boxes, set title
- link to unpublished_entries, active if no uploads
- disabled: force miniature layout if more than 20 items
- fix: better handle errors
- fix: honor RELATIVE_URL_ROOT

MediaResourcesBox:
- add props:
  - fallback: (bool to toggle, or can be content node)
- heading (title of toolbar)
  - add public method setLayout
  - fix pagination

presenters:
- remove `generic_thumbnail`s, also deduplicate some code
- MediaEntryCommon: title from filename

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -124,11 +124,13 @@ media_entry_more_data_title,Verantwortlichkeit und Aktivität,Responsibility,
 media_entry_file_information_title,Datei,File Information,
 media_entry_media_import_header,Medien importieren,Media import,
 media_entry_media_import_title,"Bilder, Videos, Audio-Dateien oder Dokumente bereitstellen.","Add pictures, videos, audio file, or other documents.",
-media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drop files anywhere to upload or,
+media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drop files here or,
+media_entry_media_import_gotodrafts,Gehe zu ungesicherten Einträgen,Go to Drafts,
+media_entry_media_import_notes_title,Hinweise,Hints,
+media_entry_media_import_notes_msg,"Bilder (TIFF, JPEG, PNG) sowie Audio- und Videofiles in den gängigsten Formaten werden direkt verarbeitet und dargestellt. Bilder im CMYK-Farbraum werden nicht korrekt dargestellt. Wandeln Sie diese vor dem Import in RGB um.","Image (TIFF, JPEG, PNG) and audio/video files in the most common formats are directly processed and displayed. Image in the CMYK color model can not be displayed correctly, please convert them to RGB before importing.",
 media_entry_media_import_inside_nojs,Dateien auswählen,Select Files,
 media_entry_back_btn,Zurück,Back,
 media_entry_upload_btn,Importieren,Upload,
-media_entry_notices_title,Hinweise,Notices,
 media_entry_export_title,Eintrag exportieren,Export Entry,
 media_entry_export_close,Schliessen,Close,
 media_entry_export_download,Download,Download,
