--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -148,6 +148,10 @@ meta_data_action_delete_btn,Löschen,Delete,
 meta_data_delete_confirm_msg,"Sind Sie sicher, dass Sie diese Werte löschen wollen?",Are you sure you want to delete these values?,
 meta_data_header_text,Werte,Values,
 meta_data_batch_items_selected,Einträge selektiert,entries selected
+meta_data_edit_media_entry_saved,Eintrag wurde gespeichert.,Entry was saved.
+meta_data_edit_media_entry_published,Eintrag wurde gespeichert und publiziert.,Entry was saved and published.
+meta_data_edit_media_entry_saved_missing,Eintrag wurde gespeichert aber es wurden nicht alle Pflichtfelder ausgefüllt.,Entry was saved but there are missing mandatory fields.
+meta_data_edit_collection_saved,Set wurde gespeichert.,Collection was saved.
 people_toolbar_header,Ähnliche Inhalte,Related Resources,
 group_edit_form_new_member_login,Login des neuen Mitglieds dieser Gruppe,New group member login,
 group_toolbar_header_entrusted_resources,Mir anvertraute Medieneinträge,Entrusted Media Entries,
