--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -262,3 +262,4 @@ workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,View cont
 workgroup_members_table_is_member,Mitglied?,Member?,
 workgroup_members_table_login,Login,Login,
 workgroup_members_table_title,Mitglieder,Members,
+media_entry_all_metadata_title,Alle MetaDaten nach Vokabularen,All Metadata by Vocabulary,
