feature: batch add to set

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -214,6 +214,9 @@ meta_data_batch_hint_equal_data,Gleiche Metadaten vorhanden,Same meta data in pl
 meta_data_batch_hint_value,Wert und Text,Value and text,
 meta_data_batch_success,Metadaten wurden erfolgreich aktualisiert.,Succesfully updated meta data.,
 meta_data_batch_failure,Metadaten konnten nicht aktualisiert werden.,Meta data could not be updated.,
+batch_add_to_collection_pre, , Add ,
+batch_add_to_collection_post, Einträge zu Set hinzufügen, entries to set,
+batch_add_to_collection_hint,Nach Sets suchen zu denen Sie die Einträge hinzufügen möchten.,Nach Sets suchen zu denen Sie die Einträge hinzufügen möchten.,
 resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
 resource_select_collection_search,Suchen,Search,
 resource_select_collection_search_placeholder,Suche,Search,
