--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -190,7 +190,6 @@ resource_select_collection_search,Suchen,Search,
 resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
 resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
-sitemap_admin,Admin,Admin,
 sitemap_api,API,API,
 sitemap_collections,Sets,Sets,
 sitemap_entries,Medieneinträge,Media Entries,
@@ -229,8 +228,11 @@ sitemap_my_used_keywords,Meine Schlagworte,My keywords,
 sitemap_search,Suche,Search,
 user_menu_login_btn,Anmelden,Log in,
 user_menu_logout_btn,Abmelden,Log out,
+user_menu_upload,Medien importieren,Upload Media,
+user_menu_admin_ui,Admin-Interface öffnen,Open Admin Interface,
 workgroup_link_to_contents_text,Inhalte,Contents,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,View contents of this work group,
 workgroup_members_table_is_member,Mitglied?,Member?,
 workgroup_members_table_login,Login,Login,
 workgroup_members_table_title,Mitglieder,Members,
+app_notice_logged_out,Sie haben sich abgemeldet.,You have logged out.,
