--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -4,14 +4,14 @@ authentication_groups,Systemgruppen,System Groups,
 batch_add_to_collection_hint,Nach Sets suchen zu denen Sie die Einträge hinzufügen möchten.,Nach Sets suchen zu denen Sie die Einträge hinzufügen möchten.,
 batch_add_to_collection_post, Einträge zu Set hinzufügen, entries to set,
 batch_add_to_collection_pre, , Add ,
-batch_meta_data_edit,Metadaten für %{media_entry_count} Einträge gleichzeitig editieren,Edit meta data for %{media_entry_count} entries at once.,TODO_cleanup_interpolation
+batch_meta_data_edit,Metadaten für %{media_entry_count} Einträge gleichzeitig editieren,Edit metadata for %{media_entry_count} entries at once.,TODO_cleanup_interpolation
 btn_delete_confirm_msq,"Sind Sie sicher, dass Sie diesen Inhalt löschen wollen?",Are you sure you want to delete this item?,
 btn_delete_text,Löschen,Delete,
 btn_publish_confirm_msg,"Sind Sie sicher, dass Sie diesen Inhalt sichern wollen?",Are you sure you want to publish this item?,
 btn_publish_text,Speichern,Save,
 collection_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgendes Set löschen möchten: ",Are you sure that you want to delete the following set:,
 collection_ask_delete_title,Set löschen,Delete Set,
-collection_delete_success,Set wurde gelöscht!,Set deleted.,
+collection_delete_success,Set wurde gelöscht.,Set deleted.,
 collection_edit_cover_submit_btn,Auswahl speichern,Submit,
 collection_edit_cover_submit_btn,Speichern,Submit,
 collection_edit_cover_title,Titelbild für Set festlegen,Define Set Cover,
@@ -38,13 +38,13 @@ collection_resource_selection_h_selection,Auswahl,Selection,
 collection_resource_selection_h_subtitle,Untertitel,Subtitle,
 collection_resource_selection_h_title,Titel,Title,
 collection_resource_selection_save,Auswahl speichern,Save selection,
-collection_select_collection_flash_result,Set aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed set from %{removed_count} sets. Added set to %{added_count} sets.,TODO_cleanup_interpolation
+collection_select_collection_flash_result,Set aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed set from %{removed_count} set(s). Added set to %{added_count} set(s).,TODO_cleanup_interpolation
 collection_tab_main,Set,Set,
 collection_was_disfavored,Das Set wurde von den Favoriten entfernt.,Set was removed from favorites.,
 collection_was_favored,Das Set wurde zu den Favoriten hinzugefügt.,Set was added to favorites.,
-dashboard_create_collection_btn,Set erstellen,Create set,
+dashboard_create_collection_btn,Set erstellen,Create Set,
 dashboard_create_collection,Set erstellen,Create set,
-dashboard_create_media_entry_btn,Medien importieren,Add Media,
+dashboard_create_media_entry_btn,Medien importieren,Upload Media,
 dashboard_title_head,Mein Archiv,My Archive,
 dashboard_welcome_msg,Willkommen im Medienarchiv der Künste!,Welcome to Madek!,
 external_groups,Abteilungsgruppen,Division groups,
@@ -57,41 +57,41 @@ group_new_group_btn,Neue Arbeitsgruppe,New Work Group,
 group_toolbar_header_entrusted_resources,Mir anvertraute Medieneinträge,Entrusted Media Entries,
 internal_groups,Arbeitsgruppen,Work groups,
 login_box_author, ,,
-login_box_cite,Das Medienarchiv der Künste ist die Plattform der ZHdK zum gemeinschaftlichen Arbeiten mit Medien und Teilen von Inhalten.,,
+login_box_cite,Das Medienarchiv der Künste ist die Plattform der ZHdK zum gemeinschaftlichen Arbeiten mit Medien und Teilen von Inhalten.,The Media Archive of the Arts is ZHdK’s plattform for collaborative working with media.,
 login_box_external,ZHdK-Login,ZHdK Login,
-login_box_hint_first_line,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.,,
+login_box_hint_first_line,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.,For using of all function and access to more content.,
 login_box_hint_second_line, ,,
 login_box_internal,Externe,External,
 login_box_login_btn,Anmelden,Log In,
 login_box_rememberme,Login merken,remember me,
 login_box_title,Digitales Areal ZHdK,Digital Area ZHdK,
-media_entry_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgende Eintrag löschen möchten: ",Are you sure that you want to delete the following entry:,
+media_entry_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgende Eintrag löschen möchten: ",Are you sure that you want to delete the following media entry:,
 media_entry_ask_delete_title,Eintrag löschen,Delete Entry,
 media_entry_back_btn,Zurück,Back,
-media_entry_delete_success,Eintrag wurde gelöscht!,Entry deleted.,
+media_entry_delete_success,Medieneintrag wurde gelöscht.,Media entry deleted.,
 media_entry_export_close,Schliessen,Close,
 media_entry_export_download,Download,Download,
-media_entry_export_has_no_original,You are not allowed to download the original file.,You are not allowed to download the original file.,
-media_entry_export_no_content,You have no access to the original file and there are no previews available.,You have no access to the original file and there are no previews available.,
-media_entry_export_original_hint,Download original file as it was when it was uploaded.,Download original file as it was when it was uploaded.,
+media_entry_export_has_no_original,Sie verfügen nicht über die nötigen Berechtigung für den Download der Originaldatei.,You are not allowed to download the original file.,
+media_entry_export_no_content,Sie haben keine Zugriffsrechte für die Originaldatei und es steht keine Vorschau zur Verfügung.,You have no access to the original file and there is no preview available.,
+media_entry_export_original_hint,Download original file as it was when it was uploaded.,Download original file as it was uploaded.,
 media_entry_export_original,Original,Original,
 media_entry_export_subtitle_audios,Audios,Audios,
 media_entry_export_subtitle_documents,Dokumente,Dokumente,
 media_entry_export_subtitle_images,Bilder,Bilder,
 media_entry_export_subtitle_videos,Videos,Videos,
-media_entry_export_title,Eintrag exportieren,Export Entry,
+media_entry_export_title,Eintrag exportieren,Download Entry,
 media_entry_file_information_title,Datei,File Information,
-media_entry_media_import_gotodrafts,Gehe zu ungesicherten Einträgen,Go to Drafts,
-media_entry_media_import_header,Medien importieren,Media import,
+media_entry_media_import_gotodrafts,Gehe zu ungesicherten Medieneinträgen,Go to Drafts,
+media_entry_media_import_header,Medien importieren,Media upload,
 media_entry_media_import_inside_nojs,Dateien auswählen,Select Files,
-media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drop files here or,
-media_entry_media_import_notes_msg,"Bilder (TIFF, JPEG, PNG) sowie Audio- und Videofiles in den gängigsten Formaten werden direkt verarbeitet und dargestellt. Bilder im CMYK-Farbraum werden nicht korrekt dargestellt. Wandeln Sie diese vor dem Import in RGB um.","Image (TIFF, JPEG, PNG) and audio/video files in the most common formats are directly processed and displayed. Image in the CMYK color model can not be displayed correctly, please convert them to RGB before importing.",
+media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drag & drop files here or,
+media_entry_media_import_notes_msg,"Bilder (TIFF, JPEG, PNG) sowie Audio- und Videofiles in den gängigsten Formaten werden direkt verarbeitet und dargestellt. Bilder im CMYK-Farbraum werden nicht korrekt dargestellt. Wandeln Sie diese vor dem Import in RGB um.","Images (TIFF, JPEG, PNG) and audio/video files in the most common formats are directly processed and displayed. Images in the CMYK color model cannot be displayed correctly, please convert them to RGB before uploading.",
 media_entry_media_import_notes_title,Hinweise,Hints,
 media_entry_media_import_title,"Bilder, Videos, Audio-Dateien oder Dokumente bereitstellen.","Add pictures, videos, audio file, or other documents.",
-media_entry_meta_data_header_prefix,Metadaten editieren: ,Edit Metadata:,
+media_entry_meta_data_header_prefix,Medieneintrag editieren: ,Edit Media Entry:,
 media_entry_more_data_title,Verantwortlichkeit und Aktivität,Responsibility,
 media_entry_not_published_warning_msg,Dieser Medieneintrag ist noch nicht gesichert!,Media entry is not saved yet!,
-media_entry_select_collection_flash_result,Eintrag aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed entry from %{removed_count} sets. Added entry to %{added_count} sets.,TODO_cleanup_interpolation
+media_entry_select_collection_flash_result,Eintrag aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed entry from %{removed_count} set(s). Added entry to %{added_count} set(s).,TODO_cleanup_interpolation
 media_entry_tab_main,Medieneintrag,Media Entry,
 media_entry_tab_more_data,Alle Daten,All Data,
 media_entry_tab_permissions,Berechtigungen,Permissions,
@@ -101,20 +101,20 @@ media_entry_was_disfavored,Der Medieneintrag wurde von den Favoriten entfernt.,M
 media_entry_was_favored,Der Medieneintrag wurde zu den Favoriten hinzugefügt.,Media entry was added to favorites.,
 meta_data_action_delete_btn,Löschen,Delete,
 meta_data_action_edit_btn,Bearbeiten,Edit,
-meta_data_batch_failure,Metadaten konnten nicht aktualisiert werden.,Meta data could not be updated.,
+meta_data_batch_failure,Metadaten konnten nicht aktualisiert werden.,Metadata could not be updated.,
 meta_data_batch_hint_differences_override,"Achtung: Bestehende Werte werden durch Änderungen überschrieben! Wenn keine Änderungen vorgenommen werden, bleiben die verschiedenen Werte erhalten.",Attention: Changes will replace exiting values. Without changes values will be preserved.,
-meta_data_batch_hint_differences,Unterschiedliche Metadaten vorhanden,Different meta data in place.,
-meta_data_batch_hint_equal_data,Gleiche Metadaten vorhanden,Same meta data in place.,
-meta_data_batch_hint_no_data,Noch keine Metadaten vorhanden,No meta data available yet.,
+meta_data_batch_hint_differences,Unterschiedliche Metadaten vorhanden,Different metadata in place.,
+meta_data_batch_hint_equal_data,Gleiche Metadaten vorhanden,Same metadata in place.,
+meta_data_batch_hint_no_data,Noch keine Metadaten vorhanden,No metadata available yet.,
 meta_data_batch_hint_value,Wert und Text,Value and text,
 meta_data_batch_items_selected,Einträge selektiert,entries selected,
-meta_data_batch_success,Metadaten wurden erfolgreich aktualisiert.,Succesfully updated meta data.,
+meta_data_batch_success,Metadaten wurden erfolgreich aktualisiert.,Succesfully updated metadata.,
 meta_data_batch_title_post, Einträge gleichzeitig editieren, Einträge gleichzeitig editieren,
 meta_data_batch_title_pre,Metadaten für ,Metadaten für ,
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_post,!,!,
-meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank meta datum value for meta key ,
-meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank meta datum value for meta key ,
+meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank metadatum value for meta key ,
+meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank metadatum value for meta key ,
 meta_data_delete_confirm_msg,"Sind Sie sicher, dass Sie diese Werte löschen wollen?",Are you sure you want to delete these values?,
 meta_data_edit_collection_saved,Set wurde gespeichert.,Collection was saved.,
 meta_data_edit_media_entry_published,Eintrag wurde gespeichert und publiziert.,Entry was saved and published.,
@@ -134,10 +134,10 @@ no_relations_title,Es wurden keine Zusammenhänge gefunden.,No relations found.,
 pagination_of,von,of,
 pagination_prefix,Seite,Page,
 people_toolbar_header,Ähnliche Inhalte,Related Resources,
-permission_name_edit_metadata_and_relations,Metadaten editieren & Inhalte hinzufügen,Edit Metadate and contents,
+permission_name_edit_metadata_and_relations,Metadaten editieren & Inhalte hinzufügen,Edit Metadata and contents,
 permission_name_edit_metadata,Metadaten editieren,Edit metadata,
 permission_name_edit_permissions,Zugriffsberechtigungen ändern,Edit permissions,
-permission_name_get_full_size,Original exportieren & in PDF blättern,Export original & browse PDF,
+permission_name_get_full_size,Original exportieren & in PDF blättern,Download original & browse PDF,
 permission_name_get_metadata_and_previews,Betrachten,View,
 permission_overridden_by_public,(überschrieben durch die öffentlichen Berechtigungen),(overridden by public permissions),
 permission_subject_name_public,Internet,Internet,
@@ -160,13 +160,18 @@ picture_alt_prefix,Bild: ,Picture:,
 relations_parents_title,Übergeordnete Sets,Parents,
 relations_siblings_title,Benachbarte Sets,Siblings,
 relations_title,Zusammenhänge,Relations,
+resource_action_destroy,Medieneintrag löschen,Delete media entry,
+resource_action_edit,Editieren,Edit,
+resource_action_export,Exportieren,Download,
+resource_action_favor,Zu Favoriten hinzufügen/entfernen,Add to/Remove from favorites,
+resource_action_set_collection,Zu Sets hinzufügen/Aus Sets entfernen,Add to/Remove from sets,
 resource_ask_delete_cancel,Abbrechen,Cancel,
 resource_ask_delete_ok,Löschen,Delete,
 resource_ask_delete_question_post,?,?,
 resource_meta_data_copyright_notice,Rechte am geistigen Eigentum,Copyright notice,
 resource_meta_data_date,Datierung,Date,
 resource_meta_data_description,Beschreibung,Description,
-resource_meta_data_fallback,Es sind keine Metadaten zu diesem Kontext bereitgestellt.,No meta data for this context.,
+resource_meta_data_fallback,Es sind keine Metadaten zu diesem Kontext bereitgestellt.,No metadata for this context.,
 resource_meta_data_has_validation_errors,Es gibt fehlerhafte Eingabefelder.,Es gibt fehlerhafte Eingabefelder.,
 resource_meta_data_keywords,Schlagworte,Keywords,
 resource_meta_data_resource_type,Medientyp,Media type,
@@ -192,7 +197,7 @@ sitemap_entries,Medieneinträge,Media Entries,
 sitemap_explore,Erkunden,Explore,
 sitemap_filter_sets,Filtersets,Filter sets,
 sitemap_help,Support,Support,
-sitemap_media_entries,Einträge,Media entries,
+sitemap_media_entries,Medieneinträge,Media entries,
 sitemap_my_archive_title,Mein Archiv,My Archive,
 sitemap_my_archive,Mein Archiv,My archive,
 sitemap_my_content_collections_title,Meine Sets,My Sets,
@@ -215,8 +220,8 @@ sitemap_my_favorite_media_entries_title,Meine Favoriten (Medieneinträge),My Fav
 sitemap_my_favorite_media_entries,Meine Favoriten (Medieneinträge),My favorites (media entries),
 sitemap_my_groups_title,Meine Arbeitsgruppen,My Work Groups,
 sitemap_my_groups,Meine Arbeitsgruppen,My work groups,
-sitemap_my_latest_imports_title,Meine letzten Importe,My Latest Imports,
-sitemap_my_latest_imports,Meine letzten Importe,My latest imports,
+sitemap_my_latest_imports_title,Meine letzten Importe,My Latest Uploads,
+sitemap_my_latest_imports,Meine letzten Importe,My latest uploads,
 sitemap_my_unpublished_title,Meine ungesicherten Medieneinträge,My Unsaved Media Entries,
 sitemap_my_unpublished,Meine ungesicherten Medieneinträge,My unsaved media entries,
 sitemap_my_used_keywords_title,Meine Schlagworte,My Keywords,
