--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -193,6 +193,12 @@ resource_select_collection_save,Speichern,Save,
 resource_select_collection_search_placeholder,Suche,Search,
 resource_select_collection_search,Suchen,Search,
 resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
+resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selected to Set,
+resources_box_batch_actions_delete,Ausgewählte löschen,Delete selected,
+resources_box_batch_actions_edit,Metadaten von Medieneinträgen editieren,Edit MetaData,
+resources_box_batch_actions_menu_title,Aktionen,Actions,
+resources_box_batch_actions_save,Als FilterSet speichern,Save as FilterSet,
+resources_box_title_count_post,Inhalte,Items,
 resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
 sitemap_api,API,API,
