views: search results: Entries/Sets switcher
- template: ResourceBoxWithSwitch
- views: entries/index, sets/index

- simple version, link only
- link to sets removes filter!
- make box sidefilter work 'search' only

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -203,11 +203,11 @@ resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
 sitemap_api,API,API,
 sitemap_collections,Sets,Sets,
-sitemap_entries,Medieneinträge,Media Entries,
+sitemap_entries,Medieneinträge,Entries,
 sitemap_explore,Erkunden,Explore,
 sitemap_filter_sets,Filtersets,Filter sets,
 sitemap_help,Support,Support,
-sitemap_media_entries,Medieneinträge,Media entries,
+sitemap_media_entries,Medieneinträge,Entries,
 sitemap_my_archive_title,Mein Archiv,My Archive,
 sitemap_my_archive,Mein Archiv,My archive,
 sitemap_my_content_collections_title,Meine Sets,My Sets,
