fix: layout and i18n for edit context meta data

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -125,8 +125,9 @@ meta_data_edit_collection_saved,Set wurde gespeichert.,Collection was saved.,
 meta_data_edit_media_entry_published,Eintrag wurde gespeichert und publiziert.,Entry was saved and published.,
 meta_data_edit_media_entry_saved_missing,Eintrag wurde gespeichert aber es wurden nicht alle Pflichtfelder ausgefüllt.,Entry was saved but there are missing mandatory fields.,
 meta_data_edit_media_entry_saved,Eintrag wurde gespeichert.,Entry was saved.,
-meta_data_form_cancel_link,Abbrechen,Cancel,
-meta_data_form_save_btn,Speichern,Save,
+meta_data_form_cancel,Abbrechen,Cancel,
+meta_data_form_save,Speichern,Save,
+meta_data_form_publish,Publizieren,Publish,
 meta_data_form_submit_btn,Speichern,Submit,
 meta_data_header_text,Werte,Values,
 meta_data_meta_key_label,Schlüssel,Key,
