feat: enforce users' acceptance of latest usage terms
controller:
- application contoller hook (Author: Matúš Kmiť <matus.kmit@zhdk.ch>)
- integrate with error handling
- errors: support "templates by status code"

view:
- port template

presenter:
- ErrorShow: support exception.class.data
- UsageTerm

view:
- template for error status 499

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -126,8 +126,8 @@ meta_data_edit_media_entry_published,Eintrag wurde gespeichert und publiziert.,E
 meta_data_edit_media_entry_saved_missing,Eintrag wurde gespeichert aber es wurden nicht alle Pflichtfelder ausgefüllt.,Entry was saved but there are missing mandatory fields.,
 meta_data_edit_media_entry_saved,Eintrag wurde gespeichert.,Entry was saved.,
 meta_data_form_cancel,Abbrechen,Cancel,
-meta_data_form_save,Speichern,Save,
 meta_data_form_publish,Publizieren,Publish,
+meta_data_form_save,Speichern,Save,
 meta_data_form_submit_btn,Speichern,Submit,
 meta_data_header_text,Werte,Values,
 meta_data_meta_key_label,Schlüssel,Key,
@@ -238,6 +238,8 @@ sitemap_my_unpublished,Meine ungesicherten Medieneinträge,My unsaved media entr
 sitemap_my_used_keywords_title,Meine Schlagworte,My Keywords,
 sitemap_my_used_keywords,Meine Schlagworte,My keywords,
 sitemap_search,Suche,Search,
+usage_terms_accept_btn,Nutzungsbedingungen akzeptieren,Accept usage terms,
+usage_terms_reject_btn,Ablehnen,Reject usage terms,
 user_menu_admin_ui,Admin-Interface öffnen,Open Admin Interface,
 user_menu_login_btn,Anmelden,Log in,
 user_menu_logout_btn,Abmelden,Log out,
