feature: batch remove from set

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -5,6 +5,13 @@ authentication_groups,Systemgruppen,System Groups,
 batch_add_to_collection_hint,Nach Sets suchen zu denen Sie die Einträge hinzufügen möchten.,Nach Sets suchen zu denen Sie die Einträge hinzufügen möchten.,
 batch_add_to_collection_post, Einträge zu Set hinzufügen, entries to set,
 batch_add_to_collection_pre, , Add ,
+batch_remove_from_collection_title,Einträge/Sets aus Set entfernen,Remove entries/sets from sets,
+batch_remove_from_collection_hint_pre,Möchten Sie die folgenden Einträge/Sets aus dem Set ,Do you want to remove the following entries/sets from the set,
+batch_remove_from_collection_hint_post, entfernen?,?,
+batch_remove_from_collection_media_entries, Eintrag(äge), Entry(ies),
+batch_remove_from_collection_collections, Set(s), Set(s),
+batch_remove_from_collection_remove,Entfernen,Remove,
+batch_remove_from_collection_cancel,Abbrechen,Cancel,
 batch_meta_data_edit,Metadaten für %{media_entry_count} Einträge gleichzeitig editieren,Edit metadata for %{media_entry_count} entries at once.,TODO_cleanup_interpolation
 btn_delete_confirm_msq,"Sind Sie sicher, dass Sie diesen Inhalt löschen wollen?",Are you sure you want to delete this item?,
 btn_delete_text,Löschen,Delete,
@@ -199,6 +206,7 @@ resources_box_batch_actions_delete,Ausgewählte löschen,Delete selected,
 resources_box_batch_actions_edit,Metadaten von Medieneinträgen editieren,Edit MetaData,
 resources_box_batch_actions_menu_title,Aktionen,Actions,
 resources_box_batch_actions_save,Als FilterSet speichern,Save as FilterSet,
+resources_box_batch_actions_removefromset,Aus Set entfernen,Remove from set,
 resources_box_title_count_post,Inhalte,Items,
 resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
