feat: ui: batch edit permissions

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -1,6 +1,7 @@
 key,de,en,comment
 ,,,
 app_notice_logged_out,Sie haben sich abgemeldet.,You have logged out.,
+app_warning_jsonly,"Diese Funktion erfordert JavaScript, aber es ist nicht aktiviert!","This feature needs Javascript, but it's not activated!",
 authentication_groups,Systemgruppen,System Groups,
 batch_add_to_collection_hint,Nach Sets suchen, zu denen Sie die Medieneinträge hinzufügen möchten.,Seach for sets to add media entries.,
 batch_add_to_collection_post, Medieneinträge zu Set hinzufügen, media entries to set,
@@ -179,6 +180,8 @@ permission_subject_title_groups,Gruppen,Groups,
 permission_subject_title_public,Öffentlichkeit,Public,
 permission_subject_title_users,Personen,Users,
 permissions_batch_success,Berechtigungen wurden erfolgreich aktualisiert.,Succesfully updated permissions.,
+permissions_batch_title_post, Inhalten, Resources,
+permissions_batch_title_pre,Zugriffsberechtigungen ändern von ,Edit Permissions of ,
 permissions_overview_yours_msg_end,", haben gegenwärtig als Person oder als Mitglied einer Gruppe folgende Berechtigungen",", currently have the following permissions (either directly or as a member of a group):",
 permissions_overview_yours_msg_start,"Sie, ","You, ",
 permissions_overview_yours_title,Ihre Berechtigungen,Your Permissions,
@@ -225,6 +228,7 @@ resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from
 resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selected to Set,
 resources_box_batch_actions_delete,Ausgewählte löschen,Delete selected,
 resources_box_batch_actions_edit,Metadaten von Medieneinträgen editieren,Edit MetaData,
+resources_box_batch_actions_managepermissions,Berechtigungen editieren,Edit Permissions,
 resources_box_batch_actions_menu_title,Aktionen,Actions,
 resources_box_batch_actions_removefromset,Aus Set entfernen,Remove from set,
 resources_box_batch_actions_save,Als Filterset speichern,Save as filter set,
